# fastapi_course

./: .env.sample  FILE_DB  FakeDB.py  SHARE_DB  auth.py  config.py  course.db  create_db.py  main.py  middleware.py  netdisk.py  playground.py  pyproject.toml  router.py  url_db  utils.py
Tasks/: email.py
account/: models.py  router.py  schema.py  service.py
database/: db.py  redis.py
front_end/templates/: chart.html  file.html  share.html
static/templates/: index.html
tmp/: sub.py
upload_files/: 10fd134f.json
