[project]
name = "fastapi-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "argon2-cffi>=23.1.0",
    "fastapi-mail>=1.4.2",
    "fastapi[all]>=0.115.8",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.37",
]
